--- a/cmake/McrtDenoiseConfig.cmake.in
+++ b/cmake/McrtDenoiseConfig.cmake.in
@@ -7,10 +7,12 @@
 
 include(CMakeFindDependencyMacro)
 
-find_dependency(CUDAToolkit)
 find_dependency(OpenImageDenoise)
-find_dependency(OptiX)
 find_dependency(SceneRdl2)
+if (${MOONRAY_USE_CUDA})
+    find_dependency(CUDAToolkit)
+    find_dependency(OptiX)
+endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
 
