--- a/cmake/McrtDenoiseConfig.cmake.in
+++ b/cmake/McrtDenoiseConfig.cmake.in
@@ -9,9 +9,11 @@ include(CMakeFindDependencyMacro)
 
 find_dependency(OpenImageDenoise)
 find_dependency(SceneRdl2)
-find_dependency(CUDAToolkit)
-find_dependency(OptiX)
 
+if (NOT DEFINED MOONRAY_USE_CUDA OR "${MOONRAY_USE_CUDA}")
+    find_dependency(CUDAToolkit)
+    find_dependency(OptiX)
+endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@Targets.cmake")
 
