MOONRAY-5199 macos merge (#46)
* Apple source

* Include patform cmake  module

* Fix renamed modules

* Platform fixes

* Platform fixes

* Fix compile defs

* cmake_policy CMP0144

* Revert "cmake_policy CMP0144"

This reverts commit 591b0ef33f4c57ccbfe9c8bdaa9ab3d3555034b1.

* Apple update

* Fixes for MOONRAY_USE_OPTIX and MOONRAY_USE_METAL

--- a/cmake/McrtDenoiseConfig.cmake.in
+++ b/cmake/McrtDenoiseConfig.cmake.in
@@ -10,7 +10,7 @@ include(CMakeFindDependencyMacro)
 find_dependency(OpenImageDenoise)
 find_dependency(SceneRdl2)
 
-if (NOT DEFINED MOONRAY_USE_CUDA OR "${MOONRAY_USE_CUDA}")
+if(MOONRAY_USE_OPTIX)
     find_dependency(CUDAToolkit)
     find_dependency(OptiX)
 endif()
