--- a/flowpipeline.yaml
+++ b/flowpipeline.yaml
@@ -135,6 +135,7 @@ package-configurations:
     packages_path:
     - /rel/rez/dwa
     - /rel/rez/third_party
+    - /rel/rez/pypi
     - /rel/lang/python/packages
     release_packages_path: /rel/rez/dwa
     symlink_directory: null
@@ -150,6 +151,7 @@ package-configurations:
     packages_path:
     - /rel/rez/dwa
     - /rel/rez/third_party
+    - /rel/rez/pypi
     - /rel/lang/python/packages
     release_packages_path: /rel/rez/dwa
     symlink_directory: null
@@ -164,6 +166,7 @@ package-configurations:
     packages_path:
     - /rel/rez/dwa
     - /rel/rez/third_party
+    - /rel/rez/pypi
     - /rel/lang/python/packages
     release_packages_path: /rel/rez/dwa
     symlink_directory: null
