Force buildtools to use Python 3.7

--- a/flowpipeline.yaml
+++ b/flowpipeline.yaml
@@ -129,6 +129,7 @@ package-configurations:
   rez-2-CI:
     build_context:
     - buildtools
+    - python-3.7
     environment:
       BROKEN_CUSTOM_ARGS_UNITTESTS: 1
       REZ_ALTERNATE_CONFIGURATION: CI
@@ -146,6 +147,7 @@ package-configurations:
   rez-2-RaTS:
     build_context:
     - buildtools
+    - python-3.7
     environment:
       REZ_ALTERNATE_CONFIGURATION: rats
     packages_path:
@@ -162,6 +164,7 @@ package-configurations:
   rez-2-testmap:
     build_context:
     - buildtools
+    - python-3.7
     environment: {}
     packages_path:
     - /rel/rez/dwa
